--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,46 @@
+# Core Django
 Django
-python-dotenv  
-pyotp
-django-crispy-forms 
-crispy-tailwind 
-icalendar 
+djangorestframework
+mysqlclient
+dj-database-url 
+python-dotenv
+django-phonenumber-field[phonenumbers]
+django-countries
+
+# Authentification & Sécurité
+djangorestframework-simplejwt 
+django-cors-headers 
+
+# Interface & Formulaires
+django-crispy-forms
+crispy-tailwind
+
+# Email & Calendrier
+icalendar
+
+# Gestion des Tâches
 celery
 redis
 django-celery-beat
-pillow
+
+# Paiements
+stripe
+
+# Social Auth
+social-auth-app-django
+
+# Utilitaires
+Pillow
+
+# Développement
+django-debug-toolbar 
+
+# Déploiement
+gunicorn
+whitenoise 
+
+# Manipulation de Documents
+reportlab
+python-docx 
+pdf2image
+PyPDF2
